--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
 # PYTEST
 pytest >= 7.1.2
 
-# SCHEDULE
-schedule >= 1.1.0
-
-# ValvePython -> vdf
-vdf >= 3.4
-
-# KAFKA
-confluent-kafka >= 1.9.2
+# Beautiful Soup 4
+beautifulsoup4 >= 4.11.1
