--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 # PYTEST
 pytest >= 7.1.2
 
-# Beautiful Soup 4
-beautifulsoup4 >= 4.11.1
-lxml >= 4.9.1
+# YAML
+pyyaml >= 6.0
 
-tomlkit >= 0.11.6
